--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -2,30 +2,50 @@
   "shop": {
     "title": "Happy Paws Pet Shop",
     "stats": {
-      "money": "Shop Balance: {{amount, currency(USD)}}",
-      "day": "Day {{day, number}}",
-      "date": "Today is {{date, datetime}}",
+      "money": "Shop Balance: {amount, number, ::currency/USD}",
+      "day": "Day {day}",
+      "date": "Today is {date, date, full}",
       "pets": "{count, plural, =0 {No pets available} one {# pet available} other {# pets available ({{dogs}} dogs, {{cats}} cats)}}",
-      "averageAge": "Average pet age: {{age, number(maximumFractionDigits: 1)}} years"
+      "averageAge": "Average pet age: {age, number, ::maximumFractionDigits=1} years"
     },
     "pet": {
-      "status": "{gender, select, male {He is} female {She is}} {age, plural, =0 {newborn} one {# year old} other {# years old}}",
+      "type": {
+        "dog": "Dog",
+        "cat": "Cat",
+        "bird": "Bird",
+        "fish": "Fish"
+      },
+      "status": "{gender, select, male {He is} female {She is} other {They are}} {age, plural, =0 {newborn} one {# year old} other {# years old}}",
       "adoption": "{gender, select, male {He was} female {She was}} adopted by {customerGender, select, male {Mr.} female {Ms.} other {Mx.}} {{customerName}}",
-      "price": "Adoption fee: {{price, currency(USD)}}",
-      "nextCheckup": "Next checkup: {{date, datetime(year: numeric; month: long; day: numeric)}}"
+      "price": "Adoption fee: {price, number, ::currency/USD}",
+      "nextCheckup": "Next checkup: {date, date, long}"
     },
     "customer": {
       "greeting": "{gender, select, male {He is} female {She is} other {They are}} looking for {count, plural, =0 {any pet} one {# pet} other {# pets}}",
       "preference": "{gender, select, male {He prefers} female {She prefers} other {They prefer}} {petType, select, dog {dogs} cat {cats} bird {birds} other {any pets}}",
       "history": "{gender, select, male {He has} female {She has} other {They have}} adopted {count, plural, =0 {no pets yet} one {# pet} other {# pets}}",
-      "lastVisit": "Last visit: {{date, datetime(weekday: long; month: short; day: numeric)}}",
-      "memberSince": "Member since: {{date, datetime(month: long; year: numeric)}}"
+      "lastVisit": "Last visit: {date, date, long}",
+      "memberSince": "Member since: {date, date, long}"
+    },
+    "mainPoints": {
+      "1": {
+        "title": "Free initial checkup",
+        "description": "Free initial checkup for all pets"
+      },
+      "2": {
+        "title": "Vaccination included",
+        "description": "Vaccination included for all pets"
+      },
+      "3": {
+        "title": "30-day health guarantee",
+        "description": "30-day health guarantee for all pets"
+      }
     },
     "formatting": {
-      "important": "<b>Important Notice:</b> All pets must be vaccinated",
-      "emphasis": "We <i>strongly recommend</i> regular vet checkups",
-      "mixed": "Your pet's health is our <b>number <i>one</i> priority</b>",
-      "list": "<ul><li>Free initial checkup</li><li>Vaccination included</li><li>30-day health guarantee</li></ul>"
+      "important": "<highlight>Important Notice:</highlight> All pets must be vaccinated",
+      "emphasis": "We <highlight>strongly recommend</highlight> regular vet checkups",
+      "mixed": "Your pet's health is our <highlight>number <emphasis>one</emphasis> priority</highlight>",
+      "list": "<list><item>{points}</item></list>"
     }
   }
 } 
