--- a/src/i18n/locales/es/translation.json
+++ b/src/i18n/locales/es/translation.json
@@ -2,30 +2,36 @@
   "shop": {
     "title": "Tienda de Mascotas Happy Paws",
     "stats": {
-      "money": "Saldo: {{amount, currency(EUR)}}",
-      "day": "Día {{day, number}}",
-      "date": "Hoy es {{date, datetime}}",
+      "money": "Saldo: {amount, number, ::currency/EUR}",
+      "day": "Día {day}",
+      "date": "Hoy es {date, date, full}",
       "pets": "{count, plural, =0 {No hay mascotas disponibles} one {# mascota disponible} other {# mascotas disponibles ({{dogs}} perros, {{cats}} gatos)}}",
-      "averageAge": "Edad promedio: {{age, number(maximumFractionDigits: 1)}} años"
+      "averageAge": "Edad promedio: {age, number, ::maximumFractionDigits=1} años"
     },
     "pet": {
-      "status": "{gender, select, male {Él tiene} female {Ella tiene}} {age, plural, =0 {recién nacido} one {# año} other {# años}}",
+      "type": {
+        "dog": "Perro",
+        "cat": "Gato",
+        "bird": "Pájaro",
+        "fish": "Pez"
+      },
+      "status": "{gender, select, male {Él tiene} female {Ella tiene} other {Tienen}} {age, plural, =0 {recién nacido} one {# año} other {# años}}",
       "adoption": "{gender, select, male {Fue adoptado} female {Fue adoptada}} por {customerGender, select, male {Sr.} female {Sra.} other {Sx.}} {{customerName}}",
-      "price": "Tarifa de adopción: {{price, currency(EUR)}}",
-      "nextCheckup": "Próxima revisión: {{date, datetime(year: numeric; month: long; day: numeric)}}"
+      "price": "Tarifa de adopción: {price, number, ::currency/EUR}",
+      "nextCheckup": "Próxima revisión: {date, date, long}"
     },
     "customer": {
       "greeting": "{gender, select, male {Él busca} female {Ella busca} other {Buscan}} {count, plural, =0 {cualquier mascota} one {# mascota} other {# mascotas}}",
       "preference": "{gender, select, male {Él prefiere} female {Ella prefiere} other {Prefieren}} {petType, select, dog {perros} cat {gatos} bird {pájaros} other {cualquier mascota}}",
       "history": "{gender, select, male {Él ha} female {Ella ha} other {Han}} adoptado {count, plural, =0 {ninguna mascota} one {# mascota} other {# mascotas}}",
-      "lastVisit": "Última visita: {{date, datetime(weekday: long; month: short; day: numeric)}}",
-      "memberSince": "Miembro desde: {{date, datetime(month: long; year: numeric)}}"
+      "lastVisit": "Última visita: {date, date, long}",
+      "memberSince": "Miembro desde: {date, date, long}"
     },
     "formatting": {
-      "important": "<b>Aviso Importante:</b> Todas las mascotas deben estar vacunadas",
-      "emphasis": "<i>Recomendamos encarecidamente</i> chequeos veterinarios regulares",
-      "mixed": "La salud de tu mascota es nuestra <b>prioridad <i>número uno</i></b>",
-      "list": "<ul><li>Chequeo inicial gratuito</li><li>Vacunación incluida</li><li>Garantía de salud de 30 días</li></ul>"
+      "important": "<highlight>Aviso Importante:</highlight> Todas las mascotas deben estar vacunadas",
+      "emphasis": "Nosotros <highlight>recomendamos encarecidamente</highlight> chequeos veterinarios regulares",
+      "mixed": "La salud de tu mascota es nuestra <highlight>prioridad <emphasis>número uno</emphasis></highlight>",
+      "list": "{list, select, true {{item, select, true {Chequeo inicial gratuito}}{item, select, true {Vacunación incluida}}{item, select, true {Garantía de salud de 30 días}}}}"
     }
   }
 } 
