--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -44,8 +44,18 @@
     "formatting": {
       "important": "<highlight>Important Notice:</highlight> All pets must be vaccinated",
       "emphasis": "We <highlight>strongly recommend</highlight> regular vet checkups",
-      "mixed": "Your pet's health is our <highlight>number <emphasis>one</emphasis> priority</highlight>",
-      "list": "<list><item>{points}</item></list>"
+      "mixed": "Your pet's health is our <highlight>number <emphasis>one</emphasis> priority</highlight>"
+    },
+    "names": {
+      "customers": {
+        "1": "John Smith",
+        "2": "Sarah Johnson"
+      },
+      "pets": {
+        "1": "Max",
+        "2": "Luna",
+        "3": "Charlie"
+      }
     }
   }
 } 
