--- a/src/i18n/locales/de/translation.json
+++ b/src/i18n/locales/de/translation.json
@@ -1,68 +1,24 @@
-    {
-      "shop": {
-        "title": "Tierhandlung Happy Paws",
-        "stats": {
-          "money": "Kassenstand: {amount, number, ::currency/EUR}",
-          "day": "Tag {day}",
-          "date": "Heute ist {date, date, full}",
-          "pets": "{count, plural, =0 {Keine Haustiere verfügbar} one {# Haustier verfügbar} other {# Haustiere verfügbar ({{dogs}} Hunde, {{cats}} Katzen)}}",
-          "averageAge": "Durchschnittsalter: {age, number, ::maximumFractionDigits=1} Jahre"
-        },
-        "pet": {
-          "type": {
-            "dog": "Hund",
-            "cat": "Katze",
-            "bird": "Vogel",
-            "fish": "Fisch"
-          },
-          "status": "{gender, select, male {Er ist} female {Sie ist} other {Sie sind}} {age, plural, =0 {neugeboren} one {# Jahr alt} other {# Jahre alt}}",
-          "adoption": "{gender, select, male {Er wurde} female {Sie wurde}} von {customerGender, select, male {Herr} female {Frau} other {Mx.}} {{customerName}} adoptiert",
-          "price": "Adoptionsgebühr: {price, number, ::currency/EUR}",
-          "nextCheckup": "Nächste Untersuchung: {date, date, long}"
-        },
-        "customer": {
-          "greeting": "{gender, select, male {Er sucht} female {Sie sucht} other {Sie suchen}} {count, plural, =0 {irgendein Haustier} one {# Haustier} other {# Haustiere}}",
-          "preference": "{gender, select, male {Er bevorzugt} female {Sie bevorzugt} other {Sie bevorzugen}} {petType, select, dog {Hunde} cat {Katzen} bird {Vögel} other {alle Haustiere}}",
-          "history": "{gender, select, male {Er hat} female {Sie hat} other {Sie haben}} {count, plural, =0 {noch keine Haustiere} one {# Haustier} other {# Haustiere}} adoptiert",
-          "lastVisit": "Letzter Besuch: {date, date, long}",
-          "memberSince": "Mitglied seit: {date, date, long}"
-        },
-        "pets": {
-          "names": {
-            "1": "Max",
-            "2": "Luna",
-            "3": "Charlie"
-          }
-        },
-        "mainPoints": {
-          "1": {
-            "title": "Kostenlose Erstuntersuchung",
-            "description": "Kostenlose Erstuntersuchung für alle Haustiere"
-          },
-          "2": {
-            "title": "Impfung inklusive",
-            "description": "Impfung für alle Haustiere inklusive"
-          },
-          "3": {
-            "title": "30-Tage Gesundheitsgarantie",
-            "description": "30-Tage Gesundheitsgarantie für alle Haustiere"
-          }
-        },
-        "formatting": {
-          "important": "<highlight>Wichtiger Hinweis:</highlight> Alle Haustiere müssen geimpft sein",
-          "emphasis": "Wir <highlight>empfehlen dringend</highlight> regelmäßige Tierarztbesuche",
-          "mixed": "Die Gesundheit Ihres Haustiers ist unsere <highlight>Priorität <emphasis>Nummer eins</emphasis></highlight>"
-        },
-        "names": {
-          "customers": {
-            "1": "Johann Schmidt",
-            "2": "Sara Johnson"
-          },
-          "pets": {
-            "1": "Max",
-            "2": "Luna",
-            "3": "Charlie"
-          }
-        }
-      }
-    } 
+{
+    "browserLanguage": {
+      "showInfo": "Sprachinfo anzeigen",
+      "dialogTitle": "Sprachinformationen",
+      "full": "Ihre Browsersprache ist: ",
+      "primary": "Primärer Sprachcode: ",
+      "country": "Ihr Land: ",
+      "countryLanguage": "Übliche Sprache in Ihrem Land: ",
+      "unknownLanguage": "Unbekannt",
+      "loading": "Standort wird ermittelt...",
+        "error": "Standort konnte nicht ermittelt werden",
+      "supported": "Unterstützt",
+      "notSupported": "Nicht unterstützt"
+    },
+    "languages": {
+      "en": "Englisch",
+      "es": "Spanisch",
+      "de": "Deutsch",
+      "he": "Hebräisch"
+    },
+    "common": {
+      "close": "Schließen"
+    }
+} 
