--- a/src/modules/petshop/locales/de/translation.json
+++ b/src/modules/petshop/locales/de/translation.json
@@ -58,6 +58,10 @@
           "title": "30-Tage Gesundheitsgarantie",
           "description": "30-Tage Gesundheitsgarantie für alle Haustiere"
         }
+      },
+      "controls": {
+        "addPet": "Neues Haustier hinzufügen",
+        "nextDay": "Nächster Tag"
       }
     }
   } 
