Change translation file

--- a/src/modules/petshop/locales/en/translation.json
+++ b/src/modules/petshop/locales/en/translation.json
@@ -35,9 +35,9 @@
         "2": "Sarah Johnson"
       },
       "pets": {
-        "1": "Max",
-        "2": "Luna",
-        "3": "Charlie"
+        "1": "Johnny",
+        "2": "Joey",
+        "3": "Dee Dee"
       }
     },
     "formatting": {
