--- a/src/modules/petshop/locales/en/translation.json
+++ b/src/modules/petshop/locales/en/translation.json
@@ -37,7 +37,8 @@
       "pets": {
         "1": "Johnny",
         "2": "Joey",
-        "3": "Dee Dee"
+        "3": "Dee Dee",
+        "4": "Tommy"
       }
     },
     "formatting": {
